# LITE

./: .gitignore
LITE_EDITOR/: CMakeLists.txt
LITE_EDITOR/src/: main.cpp
LITE_EDITOR/src/lib/: buffer.cpp  buffer.h  helper_functions.cpp  helper_functions.h
nano_editor/: CMakeLists.txt
nano_editor/src/: main.cpp
nano_editor/src/lib/: buffer.h  helper_functions.h
src/: main.cpp
src/lib/: buffer.cpp  buffer.h
